# pyenv_size_analyzer

./: LICENSE  README.md  pyproject.toml  setup.py
pyenv_size_analyzer/: main.py
pyenv_size_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
